; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-stm.c_lread.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-stm.c_lread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.boxreader = type { %struct.stm_copy*, i32 }
%struct.stm_copy = type { i32, i32 }

@LUA_TFUNCTION = common dso_local global i32 0, align 4
@LUA_MULTRET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lread(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.boxreader*, align 8
  %5 = alloca %struct.stm_copy*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call %struct.boxreader* @lua_touserdata(i32* %6, i32 1)
  store %struct.boxreader* %7, %struct.boxreader** %4, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = load i32, i32* @LUA_TFUNCTION, align 4
  %10 = call i32 @luaL_checktype(i32* %8, i32 2, i32 %9)
  %11 = load %struct.boxreader*, %struct.boxreader** %4, align 8
  %12 = getelementptr inbounds %struct.boxreader, %struct.boxreader* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = call %struct.stm_copy* @stm_copy(i32 %13)
  store %struct.stm_copy* %14, %struct.stm_copy** %5, align 8
  %15 = load %struct.stm_copy*, %struct.stm_copy** %5, align 8
  %16 = load %struct.boxreader*, %struct.boxreader** %4, align 8
  %17 = getelementptr inbounds %struct.boxreader, %struct.boxreader* %16, i32 0, i32 0
  %18 = load %struct.stm_copy*, %struct.stm_copy** %17, align 8
  %19 = icmp eq %struct.stm_copy* %15, %18
  br i1 %19, label %20, label %25

20:                                               ; preds = %1
  %21 = load %struct.stm_copy*, %struct.stm_copy** %5, align 8
  %22 = call i32 @stm_releasecopy(%struct.stm_copy* %21)
  %23 = load i32*, i32** %3, align 8
  %24 = call i32 @lua_pushboolean(i32* %23, i32 0)
  store i32 1, i32* %2, align 4
  br label %66

25:                                               ; preds = %1
  %26 = load %struct.boxreader*, %struct.boxreader** %4, align 8
  %27 = getelementptr inbounds %struct.boxreader, %struct.boxreader* %26, i32 0, i32 0
  %28 = load %struct.stm_copy*, %struct.stm_copy** %27, align 8
  %29 = call i32 @stm_releasecopy(%struct.stm_copy* %28)
  %30 = load %struct.stm_copy*, %struct.stm_copy** %5, align 8
  %31 = load %struct.boxreader*, %struct.boxreader** %4, align 8
  %32 = getelementptr inbounds %struct.boxreader, %struct.boxreader* %31, i32 0, i32 0
  store %struct.stm_copy* %30, %struct.stm_copy** %32, align 8
  %33 = load %struct.stm_copy*, %struct.stm_copy** %5, align 8
  %34 = icmp ne %struct.stm_copy* %33, null
  br i1 %34, label %35, label %63

35:                                               ; preds = %25
  %36 = load i32*, i32** %3, align 8
  %37 = call i32 @lua_settop(i32* %36, i32 3)
  %38 = load i32*, i32** %3, align 8
  %39 = call i32 @lua_replace(i32* %38, i32 1)
  %40 = load i32*, i32** %3, align 8
  %41 = call i32 @lua_settop(i32* %40, i32 2)
  %42 = load i32*, i32** %3, align 8
  %43 = load %struct.stm_copy*, %struct.stm_copy** %5, align 8
  %44 = getelementptr inbounds %struct.stm_copy, %struct.stm_copy* %43, i32 0, i32 1
  %45 = load i32, i32* %44, align 4
  %46 = call i32 @lua_pushlightuserdata(i32* %42, i32 %45)
  %47 = load i32*, i32** %3, align 8
  %48 = load %struct.stm_copy*, %struct.stm_copy** %5, align 8
  %49 = getelementptr inbounds %struct.stm_copy, %struct.stm_copy* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 4
  %51 = call i32 @lua_pushinteger(i32* %47, i32 %50)
  %52 = load i32*, i32** %3, align 8
  %53 = call i32 @lua_pushvalue(i32* %52, i32 1)
  %54 = load i32*, i32** %3, align 8
  %55 = load i32, i32* @LUA_MULTRET, align 4
  %56 = call i32 @lua_call(i32* %54, i32 3, i32 %55)
  %57 = load i32*, i32** %3, align 8
  %58 = call i32 @lua_pushboolean(i32* %57, i32 1)
  %59 = load i32*, i32** %3, align 8
  %60 = call i32 @lua_replace(i32* %59, i32 1)
  %61 = load i32*, i32** %3, align 8
  %62 = call i32 @lua_gettop(i32* %61)
  store i32 %62, i32* %2, align 4
  br label %66

63:                                               ; preds = %25
  %64 = load i32*, i32** %3, align 8
  %65 = call i32 @lua_pushboolean(i32* %64, i32 0)
  store i32 1, i32* %2, align 4
  br label %66

66:                                               ; preds = %63, %35, %20
  %67 = load i32, i32* %2, align 4
  ret i32 %67
}

declare dso_local %struct.boxreader* @lua_touserdata(i32*, i32) #1

declare dso_local i32 @luaL_checktype(i32*, i32, i32) #1

declare dso_local %struct.stm_copy* @stm_copy(i32) #1

declare dso_local i32 @stm_releasecopy(%struct.stm_copy*) #1

declare dso_local i32 @lua_pushboolean(i32*, i32) #1

declare dso_local i32 @lua_settop(i32*, i32) #1

declare dso_local i32 @lua_replace(i32*, i32) #1

declare dso_local i32 @lua_pushlightuserdata(i32*, i32) #1

declare dso_local i32 @lua_pushinteger(i32*, i32) #1

declare dso_local i32 @lua_pushvalue(i32*, i32) #1

declare dso_local i32 @lua_call(i32*, i32, i32) #1

declare dso_local i32 @lua_gettop(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
